<resources>
    <string name="app_name">NFT Cloud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_login_to_your_account">Please login to your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="success_login">successfully login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="field_required">Field is required</string>
    <string name="password_length">Minimum Password length is 6</string>
    <string name="upload_profile">Upload Profile</string>
    <string name="nick_name">Nick Name</string>
    <string name="full_name">Full Name</string>
    <string name="about">About</string>
    <string name="save">Save</string>
    <string name="email_already_registered">This Email is already registered please try with another Account</string>
    <string name="signup_success_login">Signup successfully , now login please</string>
    <string name="type_a_message">Type a message</string>
    <string name="search">Search</string>
    <string name="dark_mode">Dark mode</string>
    <string name="english">English</string>
    <string name="hebrew">Hebrew</string>
    <string name="set_changes">Set Changes</string>
    <string name="add_new_nft">Add New NFT</string>
    <string name="tap_to_insert_a_nft">Tap to insert a nft</string>
    <string name="nft_name">Nft Name</string>
    <string name="nft_skills">Nft Skills</string>
    <string name="like">Like</string>
    <string name="message">Message</string>
    <string name="likes">\"Likes - \"</string>
    <string name="liked_success">Liked Successfully</string>
    <string name="no_chats">No chats found</string>
    <string name="register_for_nfc">Register a account to add an NFT</string>
    <string name="image_required">Image is required</string>
    <string name="nft_added">Nft added successfully</string>
    <string name="nfts">\"NFT - \"</string>
    <string name="signout">Signout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string-array name="sort">
        <item>Newest</item>
        <item>Popular</item>
        <item>Random</item>
    </string-array>
</resources>