<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context=".Fragments.SettingsFragment">

  <CheckBox
      android:text="@string/dark_mode"
      android:id="@+id/darkmode"
      android:checked="false"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/purple_500"
        android:text="Language"
        />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/eng"
            android:text="@string/english"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/hebrew"
            android:layout_marginLeft="@dimen/_30sdp"
            android:text="@string/hebrew"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>



</LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:id="@+id/savechanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/set_changes"
        android:textColor="?android:textColorPrimary"
        android:padding="@dimen/_8sdp"
        android:backgroundTint="@color/purple_500"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_14ssp"
        />
</RelativeLayout>