<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:id="@+id/rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"

                    android:gravity="center">
                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:src="@mipmap/ic_launcher"
                        android:layout_marginLeft="@dimen/_16sdp" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:background="@drawable/edit_text_without_strock"
                    android:drawableLeft="@drawable/ic_baseline_mail_24"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:paddingStart="30dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:paddingLeft="30dp" />

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:background="@drawable/edit_text_without_strock"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:drawableLeft="@drawable/ic_baseline_lock_24"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:paddingLeft="30dp" />

                <EditText
                    android:id="@+id/signup_cPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:background="@drawable/edit_text_without_strock"
                    android:drawablePadding="@dimen/_16sdp"
                    android:fontFamily="@font/poppins_regular"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="30dp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:paddingLeft="30dp"
                    android:paddingRight="@dimen/_5sdp"
                    android:drawableLeft="@drawable/ic_baseline_lock_24" />





                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:padding="@dimen/_8sdp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.ButtonRounded"
                    android:backgroundTint="@color/purple_500"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:textAllCaps="false"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="@dimen/_14ssp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:weightSum="1"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:layout_marginBottom="@dimen/_32sdp"
                    >

                    <TextView
                        android:layout_weight="0.3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textSize="@dimen/_12ssp"
                        android:gravity="end"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView

                        android:id="@+id/tv_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/signin"
                        android:fontFamily="@font/poppins_bold"
                        android:textColor="@color/purple_500"
                        android:textSize="@dimen/_12ssp"
                        tools:layout_editor_absoluteX="318dp" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>