<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    app:cardCornerRadius="@dimen/_20sdp">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"

    >

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp">
                        <ImageView
                            android:id="@+id/img_back"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            app:tint="?android:textColorPrimary"
                            android:src="@drawable/ic_baseline_close_24"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/add_new_nft"
                            android:fontFamily="@font/poppins_bold"
                            android:textColor="?android:textColorPrimary"
                            android:gravity="center"
                            android:textSize="@dimen/_13ssp"
                            android:paddingStart="-40dp"
                            android:layout_marginTop="@dimen/_1sdp"
                            android:layout_toEndOf="@id/img_back"
                            android:paddingLeft="-40dp"
                            android:layout_toRightOf="@id/img_back" />
                    </RelativeLayout>
                    <RelativeLayout
                        android:id="@+id/rl"
                        android:layout_below="@+id/d"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_130sdp"
                        android:gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/profile_image"
                            android:layout_width="@dimen/_100sdp"
                            android:layout_height="@dimen/_100sdp"
                            android:src="@drawable/ic_baseline_person_24"
                            app:tint="?android:textColorPrimary"
                            app:civ_border_color="@android:color/darker_gray"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            app:civ_border_width="1dp" />
                    </RelativeLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl"
                        android:text="@string/tap_to_insert_a_nft"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="?android:textColorPrimary"
                        android:gravity="center"
                        android:fontFamily="@font/poppins_bold"
                        />

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:background="@drawable/edit_text_without_strock"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/nft_name"
                        android:inputType="text"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:paddingStart="30dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:paddingLeft="30dp" />

                    <EditText
                        android:id="@+id/skills"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_55sdp"
                        android:background="@drawable/edit_text_without_strock"
                        android:drawablePadding="@dimen/_16sdp"
                        android:fontFamily="@font/poppins_regular"
                        android:hint="@string/nft_skills"
                        android:paddingStart="30dp"
                        android:layout_marginBottom="@dimen/_3sdp"
                        android:drawableLeft="@drawable/ic_user"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:paddingLeft="30dp" />




                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:padding="@dimen/_8sdp"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.ButtonRounded"
                        android:backgroundTint="@color/purple_500"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/poppins_bold"
                        android:textSize="@dimen/_14ssp"
                        />

                </LinearLayout>

            </RelativeLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>